changed to use capture device

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -7,38 +7,29 @@ find_package(Y60)
 add_definitions(-DAC_BUILT_WITH_CMAKE)
 include_directories(${CMAKE_CURRENT_SOURCE_DIR})
 
-# define dependencies from local directory
-#set(VLC_LIB_NAME "CCBlueBoxSDK.lib")
-#set(CCBLUEBOX_DEFAULT_ROOT "${CMAKE_CURRENT_SOURCE_DIR}/Dependencies")
+find_package(PkgConfig)
+pkg_check_modules(PC_LIBVLC vlc)
+set(LIBVLC_DEFINITIONS ${PC_LIBVLC_CFLAGS_OTHER})
 
-#if(NOT CCBLUEBOX_ROOT)
-#    set(CCBLUEBOX_ROOT ${CCBLUEBOX_DEFAULT_ROOT})
-#endif(NOT CCBLUEBOX_ROOT)
 
-#FIND_PATH(CCBLUEBOX_INCLUDE_DIR 
-#        ICCViewer.h 
-#    PATHS
-#        ${CCBLUEBOX_ROOT}/include
-#    )
+find_path(LIBVLC_INCLUDE_DIR vlc/vlc.h
+    HINTS ${PC_LIBVLC_INCLUDEDIR} ${PC_LIBVLC_INCLUDE_DIRS}
+          PATH_SUFFIXES libvlc )
 
-#set(CCBLUEBOX_INCLUDE_DIRS ${CCBLUEBOX_INCLUDE_DIR})
 
-#mark_as_advanced(CCBLUEBOX_DEFINITIONS CCBLUEBOX_INCLUDE_DIR CCBLUEBOX_INCLUDE_DIRS)
+find_library(LIBVLC_LIBRARY NAMES vlc
+    HINTS ${PC_LIBVLC_LIBDIR} ${PC_LIBVLC_LIBRARY_DIRS} )
 
-#find_library(CCBLUEBOX_LIBRARIES NAMES ${CCBLUEBOX_LIB_NAME} 
-#    PATH_SUFFIXES
-#        libs
-#    PATHS
-#        ${CCBLUEBOX_ROOT}
-#    )
+         set(LIBVLC_LIBRARIES ${LIBVLC_LIBRARY} )
+         set(LIBVLC_INCLUDE_DIRS ${LIBVLC_INCLUDE_DIR} )
 
-#include(FindPackageHandleStandardArgs)
-#find_package_handle_standard_args(
-#        CCBLUEBOX DEFAULT_MSG
-#        CCBLUEBOX_LIBRARIES CCBLUEBOX_INCLUDE_DIR
-#)
+include(FindPackageHandleStandardArgs)
+# handle the QUIETLY and REQUIRED arguments and set LIBVLC_FOUND to TRUE
+# if all listed variables are TRUE
+find_package_handle_standard_args(LIBVLC DEFAULT_MSG
+    LIBVLC_LIBRARY LIBVLC_INCLUDE_DIR)
 
-#set(CCBB_DISPLAY_NAME "CanControls_BlueBox_Component")
+mark_as_advanced(LIBVLC_INCLUDE_DIR LIBVLC_LIBRARY )
 
 ac_add_project(
     Y60VLC
