--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -11,7 +11,7 @@ if(NOT WIN32)
     find_package(Boost COMPONENTS system thread)
 endif(NOT WIN32)
 
-set(EXTERNALS Boost)
+set(EXTERNALS Boost LIBVLC)
 
 y60_add_component(
     y60vlc 
